[package]
name = "mining-pools-benchmark"
version = "0.1.2"
authors = ["Julia Szymańska <juliaszymanska@yandex.com>"]
edition = "2018"

[dependencies]
ureq = { version = "2.1.0", features = ["json"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
